resolved sidebar issue on small screen,and added rating with products

--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -7,3 +7,18 @@
   border-radius: 8px;
   box-shadow: 1px 1px 5px #f8f9fa !important;
 }
+
+@media (max-width: 1199px) {
+  ::ng-deep .mega-menu-container {
+    opacity: 1;
+    // border-radius: 8px;
+    // box-shadow: 1px 1px 5px #f8f9fa !important;
+  }
+}
+
+.openSubMenu {
+  display: block !important;
+}
+.closeSubMenu {
+  display: block !important;
+}
